--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,10 @@
           font-size: 3.5rem;
         }
       }
+
+      main > .container {
+        padding: 60px 15px 0;
+      }
     </style>
 
     
